# secret-santa-rust

./: .editorconfig  Cargo.toml  README.md
src/: main.rs  models.rs  test_elgamal.rs
