[package]
name = "elgamal-encryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elgamal = { git = "https://github.com/ZenGo-X/rust-elgamal" , branch = "bignum_backend"}
curv-kzen = { version = "^0.9.0", features = ["num-bigint"], default-features = false }
